// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BookAppointmentPanel > Snapshot Tests > should match snapshot when no available slots exist 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
    data-testid="book-appointment-panel"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2"
      >
        <svg
          class="lucide lucide-calendar w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        Book New Appointment
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <div
          class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-4 gap-2"
        >
          <h3
            class="font-medium text-lg"
          >
            Available times for
             
            Dr. John Smith
          </h3>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 min-h-[36px] touch-manipulation bg-transparent"
            data-testid="back-to-psychologist-selection"
          >
            <svg
              class="lucide lucide-arrow-left w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
            Back
          </button>
        </div>
        <div
          class="space-y-2 max-h-80 overflow-y-auto"
          data-testid="available-slots-list"
        >
          <div
            class="text-center py-8 text-gray-500"
          >
            <svg
              class="lucide lucide-clock w-12 h-12 mx-auto mb-2 text-gray-300"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
            <p>
              No available time slots
            </p>
            <p
              class="text-sm"
            >
              Please check back later or select a different psychologist
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookAppointmentPanel > Snapshot Tests > should match snapshot when showing available slots 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
    data-testid="book-appointment-panel"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2"
      >
        <svg
          class="lucide lucide-calendar w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        Book New Appointment
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <div
          class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-4 gap-2"
        >
          <h3
            class="font-medium text-lg"
          >
            Available times for
             
            Dr. John Smith
          </h3>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 min-h-[36px] touch-manipulation bg-transparent"
            data-testid="back-to-psychologist-selection"
          >
            <svg
              class="lucide lucide-arrow-left w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
            Back
          </button>
        </div>
        <div
          class="space-y-2 max-h-80 overflow-y-auto"
          data-testid="available-slots-list"
        >
          <div
            class="flex flex-col sm:flex-row justify-between items-start sm:items-center p-4 border rounded-md hover:bg-gray-50 gap-2"
            data-testid="available-slot-slot-1"
          >
            <div
              class="flex-1"
            >
              <div
                class="font-medium"
              >
                Monday, 01/15/2024
              </div>
              <div
                class="text-sm text-gray-600 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                10:00
                 -
                 
                11:00
              </div>
            </div>
            <button
              aria-label="Book appointment on Monday, 01/15/2024 at 10:00"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 min-h-[36px] touch-manipulation w-full sm:w-auto"
              data-testid="book-slot-slot-1"
            >
              Book
            </button>
          </div>
          <div
            class="flex flex-col sm:flex-row justify-between items-start sm:items-center p-4 border rounded-md hover:bg-gray-50 gap-2"
            data-testid="available-slot-slot-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="font-medium"
              >
                Tuesday, 01/16/2024
              </div>
              <div
                class="text-sm text-gray-600 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                14:00
                 -
                 
                15:00
              </div>
            </div>
            <button
              aria-label="Book appointment on Tuesday, 01/16/2024 at 14:00"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3 min-h-[36px] touch-manipulation w-full sm:w-auto"
              data-testid="book-slot-slot-2"
            >
              Book
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookAppointmentPanel > Snapshot Tests > should match snapshot when showing psychologist selection 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
    data-testid="book-appointment-panel"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2"
      >
        <svg
          class="lucide lucide-calendar w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        Book New Appointment
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div>
        <label
          class="block text-sm font-medium mb-2"
          for="psychologist-selector"
        >
          Select Psychologist
        </label>
        <div
          class="flex flex-col sm:flex-row gap-2"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-:r0:"
            aria-expanded="false"
            class="flex h-10 items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              Choose a psychologist
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            class="sr-only"
            id="psychologist-selector-help"
          >
            Select a psychologist to view their available appointment times
          </div>
          <button
            aria-describedby="view-times-help"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 w-full min-h-[44px] touch-manipulation"
            data-testid="view-available-times-button"
            disabled=""
          >
            View Available Times
          </button>
        </div>
        <div
          class="sr-only"
          id="view-times-help"
        >
          View available appointment times for the selected psychologist
        </div>
      </div>
    </div>
  </div>
</div>
`;
